@@ -21,6 +21,9 @@ connectionsBtnAction.Action.largeIcon=${iconsPath}connect.gif
 viewsBtnAction.Action.text=&Appearance
 viewsBtnAction.Action.largeIcon=${iconsPath}palette.gif
 
+miscBtnAction.Action.text=&Misc
+miscBtnAction.Action.largeIcon=${iconsPath}miscellanous.gif
+
 btnSelectProxyListAction.Action.text=${null}
 btnSelectProxyListAction.Action.shortDescription=Select proxy list
 btnSelectProxyListAction.Action.smallIcon=${iconsPath}open_small.gif
@@ -46,9 +49,13 @@ checkDecoratedFrames.text=Use &decorated frames (effective on restart)
 checkAnimateIcon.text=Use animated &tray icon when working
 checkShowTitle.text=Show status info in &frame title 
 
+checkGenerateTXTDescription.text=Save description into file in text (filename.txt) format
+checkGenerateDescIon.text=Save description into file in Total Commander compatible (descript.ion) format
+checkGenerateHidden.text=Set generated files as hidden
+
+
 checkProcessFromTop.text=Process downloads from the &top
 
-panelViews.border=Day and Week Views
 panelApplicationSettings.border=Application
 panelConnections1.border=Connections
 panelProxySettings.border=Proxy
@@ -56,13 +63,14 @@ panelErrorHandling.border=Error handling
 panelDownloadsSettings.border=Downloads
 panelAppearance.border=Appearance
 panelSound.border=Sound
+panelDesc.border=Description files
 labelMaxConcurrentDownloads.text=&Max concurrent downloads at a time
 labelRequiresRestart.text=* Effective on restart
 labelErrorAttemptsCount.text=&Error attempts count
 labelAutoReconnectTime.text=&Autoreconnect time
 labelSeconds.text=seconds
 labelTextFileFormat.text=text file in format [user[:password]@]host:port
-labelNoAutoreconnect.text=(0 = autoreconnect off)
+labelNoAutoreconnect.text=(0 = autoreconnect off, -1 = repeat indefinitely)
 labelIfFilenameExists.text=If a filename already &exists:
 
 labelRequiresRestart2.text=(effective on restart)
